xtkbaseincludedir=$(includedir)/xtk/base

xtkbaseinclude_HEADERS = \
	application.h \
	array.h \
	charset.h \
	charstream.h \
	color.h \
	datastructures.h \
	event.h \
	exception.h \
	file.h \
	geometry.h \
	interfaces.h \
	logging.h \
	math.h \
	memory.h \
	net.h \
	object.h \
	preferences.h \
	process.h \
	random.h \
	smartptr.h \
	stacktrace.h \
	stream.h \
	string.h \
	system.h \
	testing.h \
	thread.h \
	time.h \
	typewrappers.h \
	utilities.h \
	zlibstream.h
